2010-12-15  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.53.

2010-12-15  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.h: Declare new function get_TLS and its data
	structure.
	* cupsmodule.c: Implement it.
	* cupsmodule.c, cupsconnection.c: Use thread-local storage for
	CUPS password callback (bug #662805).

2010-11-01  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.52.

2010-10-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection.getPPDs2): New method as
	getPPDs but with attribute values as lists.

2010-05-11  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c: New HTTP_NOT_MODIFIED int constant.
	* cupsconnection.c (Connection_getPPD3): New method.

2010-05-05  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): The
	member-names attribute is always a list.

2010-04-28  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinter): Clear
	printer-state-reasons if the PPD has been
	changed (bug #510926).

2010-04-26  Tim Waugh  <twaugh@redhat.com>

	* Makefile, setup.py: Define VERSION in setup.py (trac #14).

	* cupsipp.c: Added compatibility code to allow compilation
	with Python < 2.5 (trac #14).

2010-04-25  Scott Balneaves  <sbalneav@ltsp.org>

	* cupsmodule.c: PPD order constants.
	* cupsconnection.c: Support for ppdEmit* functions.

2010-04-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Optional
	requested_attributes argument (bug #584806).

	* cupsconnection.c (Connection_getPPDs, Connection_getDevices,
	Connection_getJobs, Connection_getJobAttributes): Avoid memory
	leak when argument parsing fails.

2010-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_dealloc): Be more cautious when
	removing the Connection object from the list (bug #567386).

2010-01-06  Tim Waugh  <twaugh@redhat.com>

	* cupsipp.c (IPPRequest_getAttributes): Continue to next
	attribute if we can't translate a value.
