@@ -1,5 +1,6 @@
 NAME=pycups
 VERSION:=$(shell python setup.py --version)
+RPMCONFIGDIR:=$(shell rpm -E "%{_rpmconfigdir}" 2>/dev/null || :)
 
 SOURCES=cupsmodule.c cupsconnection.c cupsppd.c cupsipp.c setup.py \
 	cupsppd.h cupsipp.h cupsconnection.h cupsmodule.h
@@ -26,10 +27,18 @@ dist:
 	tar jcf $(NAME)-$(VERSION).tar.bz2 $(NAME)-$(VERSION)
 	rm -rf $(NAME)-$(VERSION)
 
-install:
+install:	install-rpmhook
 	ROOT= ; \
 	if [ -n "$$DESTDIR" ]; then ROOT="--root $$DESTDIR"; fi; \
 	python setup.py install $$ROOT
 
-.PHONY: doc clean dist install
+install-rpmhook:
+	if [ -n "$(RPMCONFIGDIR)" ]; then \
+		RPMCONFIG="$$DESTDIR$(RPMCONFIGDIR)" ; \
+		mkdir -p "$$RPMCONFIG"/fileattrs ; \
+		install -m0644 psdriver.attr "$$RPMCONFIG"/fileattrs/ ; \
+		install -m0644 postscriptdriver.prov "$$RPMCONFIG"/ ; \
+	fi
+
+.PHONY: doc clean dist install install-rpmhook
 
